--- a/bacon-ipsum.html
+++ b/bacon-ipsum.html
@@ -22,7 +22,7 @@ Element providing solution to no problem in particular.
     <core-ajax
     auto
     method="GET"
-    url="http://baconipsum.com/api/"
+    url="https://baconipsum.com/api/"
     params='{"type":"all-meat", "paras":"{{paragraphs}}"}'
     handleAs="json"
     on-core-response="{{handleResponse}}"></core-ajax>
